整理蓝桥杯知识点

--- a/日志2022.03.md
+++ b/日志2022.03.md
@@ -3323,3 +3323,7 @@ username = "username"
 
 学习蓝桥杯嵌入式视频
 
+# 2022.03.29
+
+整理[蓝桥杯知识点](https://github.com/simoonp/little-project/blob/main/%E8%93%9D%E6%A1%A5%E6%9D%AF.md)
+
