--- a/蓝桥杯.md
+++ b/蓝桥杯.md
@@ -22,7 +22,7 @@
 
 ![image-20220328220412090](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220328_1648476252.png)
 
-调整时钟来源，外部晶振为24MHz，与分频率，使得系统频率为80MHz
+调整时钟来源，外部晶振为`24MHz`，与分频率，使得系统频率为`80MHz`
 
 ![image-20220328220549721](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220328_1648476349.png)
 
@@ -296,7 +296,7 @@ KEY_LED_Init();
 */
 __IO uint32_t uTick_key=0;
 uint8_t key_val, key_down, key_up, key_old;
-//   获取的按键，按键按下，按键松开，上一次按键值
+//    获取的按键值，按键按下， 按键松开，上一次按键值
 void Key_proc(void) 
 {
 	if(uwTick - uTick_key <200) // 按键消抖
