--- a/日志-四月的学习.md
+++ b/日志-四月的学习.md
@@ -8,6 +8,7 @@
 |夜深人静写算法|https://blog.csdn.net/whereisherofrom/category_9273531.html?spm=1001.2014.3001.5482|
 |LeetCode算法全集|https://blog.csdn.net/whereisherofrom/category_11178770.html|
 |力扣周赛题解|https://blog.csdn.net/whereisherofrom/category_11669028.html|
+|LeetCode零基础指南|https://blog.csdn.net/whereisherofrom/category_11492771.html?spm=1001.2014.3001.5482|
 |FPGA||
 |嵌入式||
 |六级||
