--- a/蓝桥杯.md
+++ b/蓝桥杯.md
@@ -565,6 +565,8 @@ void rx_read(void)
 
 向`i2c - hal.c`中添加`24c02`和`mcp4017`的读写代码
 
+![image-20220331225107930](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220331_1648738268.png)
+
 ```c
 //24c02代码
 void I2c_24c02_write(uint8_t *pucBuf ,uint8_t ucAddr, uint8_t ucNum)
@@ -584,6 +586,11 @@ void I2c_24c02_write(uint8_t *pucBuf ,uint8_t ucAddr, uint8_t ucNum)
     delay1(500);
 }
 
+```
+
+![image-20220331225119883](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220331_1648738280.png)
+
+```c
 void I2c_24c02_read(uint8_t *pucBuf ,uint8_t ucAddr, uint8_t ucNum)
 {
     I2CStart();
@@ -607,6 +614,12 @@ void I2c_24c02_read(uint8_t *pucBuf ,uint8_t ucAddr, uint8_t ucNum)
     I2CStop();
 }
 
+```
+
+![image-20220331225127674](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220331_1648738287.png)
+
+```c
+
 // mcp4017
 void wirte_resistor(uint8_t value)
 {
@@ -618,6 +631,12 @@ void wirte_resistor(uint8_t value)
     I2CWaitAck();
     I2CStop();
 }
+
+```
+
+![image-20220331225140148](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220331_1648738300.png)
+
+```c
 uint8_t read_resistor(void)
 {
     unsigned char value;
@@ -714,7 +733,7 @@ uint16_t getADC2(void)
 
 ```
 
-修改`bsp_adc.h"`
+修改`bsp_adc.h`
 
 在`main.h`->`stm32g4xx_hal.h`->`stm32g4xx_hal_conf.h`中取消`#define HAL_ADC_MODULE_ENABLED`的注释，将`stm32g4xx_hal_adc.c `和`stm32g4xx_hal_adc_ex.c`添加到工程中
 
