--- a/日志2022.03.md
+++ b/日志2022.03.md
@@ -3325,5 +3325,5 @@ username = "username"
 
 # 2022.03.29
 
-整理[蓝桥杯知识点](https://github.com/simoonp/little-project/blob/main/%E8%93%9D%E6%A1%A5%E6%9D%AF.md)
+## [蓝桥杯知识点](https://github.com/simoonp/little-project/blob/main/%E8%93%9D%E6%A1%A5%E6%9D%AF.md)
 
