--- a/日志2022.04.md
+++ b/日志2022.04.md
@@ -875,6 +875,8 @@ dpkg -r xxx
 
 **P**：若遇到由于上次使用`poweroff`关机，导致的无法开机的问题，可以尝试扣掉板子上的纽扣电池，重新装上纽扣电池，再开机
 
+**A**：使用`poweroff`关机，开发板的电源管理模块一只处于关机状态，此时直接按电源键无效，需要长按1-2S `ONOFF`键才能触发开发板开机
+
 ```shell
 用户名：debian
 密码：temppwd
@@ -882,3 +884,57 @@ dpkg -r xxx
 用户名：root
 密码：root
 ```
+
+# 4.05
+
+#### 2.2.3、ssh连接开发板
+
+1、确保开发板与笔记本电脑处在同一个局域网内
+
+2、使用`ping 笔记本ip`测试开发板能否`ping`通网络
+
+3、使用`sudo systemctl status ssh`查看`ssh`服务是否已经启动，若启动，会出现如下信息：
+
+![image-20220405214313251](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220405_1649166193.png)
+
+若`ssh`服务没有开启，使用` sudo /etc/init.d/ssh restart`命令重启`ssh`服务
+
+4、登录开发板(使用开发板的主机名`npi`登录)
+
+`ssh debian@npi`，默认密码为`temppwd`
+
+**使用fire-config，将镜像从SD卡烧录到eMMc失败**
+
+# 4.06
+
+#### 2.2.4、USB烧录
+
+0、[官方教程](https://doc.embedfire.com/linux/imx6/quick_start/zh/latest/quick_start/install_debian/install_debian.html#usb)
+
+1、去`百度云链接：https://pan.baidu.com/s/1pqVHVIdY97VApz-rVVa8pQ 提取码：uge1`下载文件
+
+![image-20220406100855719](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220406_1649210935.png)
+
+解压`mfgtools-release.rar`，使用默认配置
+
+2、开发板上电，在开发板右侧的USB-OTG口街上usb数据线到电脑，将启动拨码开关拨到USB启动模式，打开`MfgTool2.exe`
+
+```
+emmc版本：将1/4/5/7打到ON档，其他拨码开关打到OFF档。
+nand版本：将1/3/6打到ON档，其他拨码开关打到OFF档。
+```
+
+3、开发板连接正常的话
+
+![image-20220406101609880](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220406_1649211370.png)
+
+若显示`No Device Connected`可能是usb线的问题，建议换usb线
+
+![image-20220406101729205](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220406_1649211449.png)
+
+点击`Start`开始烧录，烧录完成后，两条绿色进度条走到头，
+
+![image-20220406101822957](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220406_1649211503.png)
+
+4、开发板断电，切换到emmc模式启动
+
