--- a/蓝桥杯.md
+++ b/蓝桥杯.md
@@ -14,7 +14,7 @@
 
 ![image-20220328222143863](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220328_1648477303.png)
 
-中断默认设置4位抢占优先级，0位相应优先级
+中断默认设置4位抢占优先级，0位响应优先级
 
 ![image-20220328222333069](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220328_1648477413.png)
 
