--- a/蓝桥杯.md
+++ b/蓝桥杯.md
@@ -350,7 +350,7 @@ __IO uint32_t uTick_lcd=0;
 uint8_t my_string[21];  //每行最多显示20个字符
 void Lcd_proc(void)
 {
-     if(uwTick-uTick_lcd < 200)
+    if(uwTick-uTick_lcd < 200)
         return ;
     uTick_lcd = uwTick;
     sprintf((char *)my_string, "uTick_lcd is %6d ", uTick_lcd);
@@ -553,6 +553,8 @@ void rx_read(void)
 
 ```
 
+`__HAL_UART_GET_FLAG(&huart1,UART_FLAG_IDLE);`获取串口空闲标志位，串口接收数据后`UART_FLAG_IDLE`会被置一，`__HAL_UART_CLEAR_IDLEFLAG(&huart1);`清除串口所有标志位
+
 ### 2.5、移植IIC
 
 在两个`bsp`文件夹下分别创建`bsp_i2c.c`和`bsp_i2c.h`
@@ -652,7 +654,7 @@ uint8_t read_resistor(void)
 }
 ```
 
-将四个函数添加到头文件中，将初始化函数加到`main.c`中，添加测试函数
+将四个函数添加到头文件`bsp_i2c.h`中，将初始化函数加到`main.c`中，添加测试函数
 
 ```c
 // 全局变量
@@ -760,7 +762,7 @@ uint16_t getADC2(void)
 
 #### 2.7.1、基本定时器
 
-基本定时器(TIM6/Tim7)
+基本定时器(TIM6/TIM7)
 
 设置TIM6，预分频8000，计数周期为1000，定时器为100ms计数一次
 
@@ -849,6 +851,7 @@ int tim6_counter = 0;
     PWM_Output_TIM17_Init();
     HAL_TIM_PWM_Start(&htim3, TIM_CHANNEL_1);   // PA6
     HAL_TIM_PWM_Start(&htim17, TIM_CHANNEL_1);  // PA7
+	// __HAL_TIM_SET_COMPARE(__HANDLE__, __CHANNEL__, 0)	// 强制配置成低电平
 
 /*
 函数名：HAL_TIM_PeriodElapsedCallback
@@ -882,7 +885,7 @@ void HAL_TIM_IC_CaptureCallback(TIM_HandleTypeDef *htim) {
     
 }
 /*
-函数名：HAL_TIM_IC_CaptureCallback
+函数名：HAL_TIM_OC_DelayElapsedCallback
 入口参数：TIM_HandleTypeDef *htim 定时器15地址
 返回值：void
 功能：TIM15 输出频率为5000Hz的方波
