--- a/日志2022.04.md
+++ b/日志2022.04.md
@@ -938,3 +938,234 @@ nand版本：将1/3/6打到ON档，其他拨码开关打到OFF档。
 
 4、开发板断电，切换到emmc模式启动
 
+# 4.08
+
+#### 2.3.1、查看开发板信息
+
+Linux将系统运行的信息都记录在/proc目录下的文件中， 用户可以通过访问该目录下的文件获取对应的系统信息
+
+![image-20220407101113584](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220407_1649297474.png)
+
+| 文件名 | 功能 |
+| ------ | ---- |
+|   pid* |“pid*”通常就是一个数字，该数字表示的是进程的 PID 号，系统中当前运行的每一个进程都有对应的一个目录，用于记录进程所有相关信息。对于操作系统来说，一个应用程序就是一个进程|
+|self|该文件是一个软链接，指向了当前进程的目录，通过访问/proc/self/目录来获取当前进程的信息，就不用每次都获取pid|
+|thread-self|该文件也是一个软链接，指向了当前线程，访问该文件，等价于访问“当前进程pid/task/当前线程tid”的内容。一个进程，可以包含多个线程，但至少需要一个进程，这些线程共同支撑进程的运行。|
+|version|记录了当前运行的内核版本，通常可以使用“uname –r”命令查看|
+|cpuinfo|记录系统中CPU的提供商和相关配置信息|
+|modules|记录了目前系统加载的模块信息|
+|meminfo|记录系统中内存的使用情况，free命令会访问该文件，来获取系统内存的空闲和已使用的数量|
+|filesystems|记录内核支持的文件系统类型，通常mount一个设备时，如果没有指定文件系统并且它无法确定文件系统类型时，mount会尝试包含在该文件中的文件系统，除了那些标有“nodev”的文件系统。|
+
+记录系统中CPU的提供商和相关配置信息
+
+![image-20220407101744171](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220407_1649297864.png)
+
+记录了当前运行的内核版本，通常可以使用`uname –r`命令查看
+
+![image-20220407101837920](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220407_1649297918.png)
+
+![image-20220407102037484](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220407_1649298037.png)
+
+记录系统中内存的使用情况，`free`命令会访问该文件，来获取系统内存的空闲和己使用的数量
+
+![image-20220407102136198](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220407_1649298096.png)
+
+通过`free`命令查看系统的内存大小(单位Byte)
+
+![image-20220407102247384](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220407_1649298167.png)
+
+/proc/partitions文件包含了存储器的分区信息，查看分区信息可以了解板载FLASH存储器的容量。
+
+![image-20220407102959447](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220407_1649298599.png)
+
+在/proc文件夹下，有很多以数字命名的文件夹，这些文件夹是用来记录当前正在运行的进程状态，文件名则是他们的pid号，每一个进程都对应一个pid号，用于辨识。这些进程文件夹中包含的内容，基本上是大同小异的。使用`ls`命令，来查看pid为1的文件夹内容，如下图所示。其中，fd记录里当前进程使用的文件描述，mountinfo记录了挂载信息，mem则记录了该进程的内存使用情况等。
+
+![image-20220407103706703](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220407_1649299026.png)
+
+可以使用`top`命令，实时查看系统信息
+
+![image-20220407103815459](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220407_1649299095.png)
+
+/proc/filesystems可以用来查看内核支持的文件系统类型，如上图所示。图中有部分文件系统前带有“nodev”标志，表示这些文件系统不需要挂载块设备，如网络文件系统nfs/nfs4，伪文件系统sysfs等。
+
+![image-20220407104149236](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220407_1649299309.png)
+
+文件/sys/devices/system/cpu/cpu0/cpufreq/cpuinfo_cur_freq 包含了CPU 当前的主频信息，若系统存在该文件，可以把它的内容输出来查看
+
+![image-20220407104340157](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220407_1649299420.png)
+
+#### 2.3.2、/sys 目录
+
+`/sys`目录下的文件/文件夹向用户提供了一些关于`设备`、`内核模块`、`文件系统`以及`其他内核组件`的信息，如子目录block中存放了所有的块设备；子目录bus中存放了系统中所有的总线类型，有i2c、usb、sdio，pci等；子目录class按类型归类设备，如leds，Icd，mtd，pwm等。
+
+![image-20220407104944919](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220407_1649299785.png)
+
+开发板的`/sys/class/leds `目录下分别有：`blue`、`cpu`、`green`、`red`等目录，它们代表着开发板上不同的LED 灯，是由Linux 内核驱动提供给用户的控制接口。
+
+以其中的`/sys/class/leds/cpu`目录为例，它下面又包含`brightness`，`device`，`max_brightness`，`power`，`subsystem`，`trigger`，`uevent`等文件。其中`brightness`表示 LED灯的**亮度**，`trigger`表示LED灯的**触发方式**，我们可以通过`echo，cat`等命令来修改或查看这些文件，从而达到控制LED灯的目的。(操作这些文件需要root权限)
+
+Pro开发板上的灯是混色的，受RGB三种颜色的共同影响
+
+#### 2.3.3、/dev 目录
+
+包含了Linux 系统中使用的所有外部设备，如`/dev/tty`为串口设备、`/dev/ram`为内存、通过这些设备文件，我们也可以访问到对应的硬件设备。
+
+![image-20220407112215537](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220407_1649301735.png)
+
+![image-20220407112243603](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220407_1649301763.png)
+
+![image-20220407112412006](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220407_1649301852.png)
+
+以使用`evtest`工具更方便地查看硬件当前接入的输入设备，并且对其进行实时检测。
+
+![image-20220407112857052](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220407_1649302137.png)
+
+#### 2.3.4、开发板测试脚本
+
+```shell
+# 安装所需工具
+sudo apt install bc evtest
+
+# 安装脚本
+sudo apt install peripheral
+```
+
+开发板提供的脚本：
+
+![image-20220407142809403](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220407_1649312889.png)
+
+#### 2.3.5、开发主机安装NFS服务
+
+
+
+```shell
+# 安装程序
+sudo apt install nfs-kernel-server
+
+# 查看用户 uid 和组 gid
+id
+
+# 安装 NFS 服务后，会新增一个/etc/exports 文件，NFS 服务 根据它的配置来运行
+
+# 创建共享文件夹
+mkdir ~/workdir
+```
+
+配置`/etc/exports`
+
+```shell
+# 在文件最后一行加入：
+/home/dingfang/workdir 192.168.8.0/24(rw,sync,all_squash,anonuid=1000,anongid=1000,no_subtree_check)
+```
+
+`/home/dingfang/workdir`：要共享的开发主机目录，注意使用空格与后面的配置隔开。
+
+`192.168.8.0/24`：配 置 谁 可 以 访 问，/24是掩码，处于统一局域网的设备都可以访问，也可以配置成指定的ip。
+
+`rw`：rw: 表示客户机的权限，rw 表示可读写。
+
+`sync`：资料同步写入到内存与硬盘中。
+
+`anonuid`：将客户机上的用户映射成指定的本地用户 ID 的用户，`1000`是开发主机用户`dingfang`的`uid`。
+
+`anongid`：将客户机上的用户映射成属于指定的本地用户组 ID，`1000`是开发主机用户`dingfang`的`gid`。
+
+`no_subtree_check`：不检查子目录权限，默认配置。
+
+```shell
+# 更新 exports 配置
+sudo exportfs -arv
+# -a 全部 mount 或 umount 文件/etc/exports 中的内容。
+# -r 重新 mount 文件/etc/exports 中的共享内容。
+# -u umount 目录。
+# -v 在 exportfs 的时候，将详细的信息输出到屏幕上。
+```
+
+配置正常效果如下：
+
+![image-20220410225637311](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220410_1649602598.png)
+
+```shell
+# 使用 showmount –e 可查看当前 NFS 服务器的加载情况
+showmount –e
+```
+
+![image-20220410225732773](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220410_1649602652.png)
+
+开发板安装NFS客户端
+
+```shell
+sudo apt install nfs-common -y
+```
+
+查看 NFS 服务器共享目录
+
+```shell
+# showmount -e NFS服务器ip
+showmount -e 192.168.8.129
+```
+
+![image-20220411162148921](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220411_1649665309.png)
+
+开发板临时挂载NFS系统
+
+```shell
+sudo mount -t nfs 192.168.8.129:/home/dingfang/workdir /mnt
+# -t nfs：指定挂载的文件系统格式为 nfs
+# 192.168.8.129：指定 NFS 服务器的 IP 地址
+# /home/dingfang/workdir：指定 NFS 服务器的共享目录
+# /mnt：本地挂载目录，即要把 NFS 服务器的共享目录映射成开发板的/mnt 目录
+```
+
+![image-20220411163231714](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220411_1649665951.png)
+
+取消挂载
+
+```shell
+sudo umount /mnt
+# 使用该命令时以要取消挂载的目录作为参数即可，没有输出表示执行正常。如果在当前挂载的目录进行umount操作，会提示"device is busy”。建议取消挂载时，先切换到家目录“~”，在进行umount 操作。
+```
+
+# 4.11
+
+#### 2.4.1、开发主机安装交叉工具链
+
+```shell
+# 安装
+sudo apt install gcc-arm-linux-gnueabihf
+# 查看版本
+arm-linux-gnueabihf-gcc -v
+```
+
+![image-20220411164040758](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220411_1649666441.png)
+
+安装好交叉编译器后，直接使用它对 Hello World 程序进行交叉编译即可
+
+```shell
+arm-linux-gnueabihf-gcc hello.c -o hello
+```
+
+![image-20220411164410733](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220411_1649666650.png)
+
+开发板运行测试
+
+![image-20220411164435412](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220411_1649666675.png)
+
+# 4.12
+
+#### 2.4.2、makefile
+
+
+
+# 4.13
+
+#### 阅读并总结《提问的艺术》
+
+![How_To_Ask_Questions_The_Smart_Way](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220413_1649833366.png)
+
+![How_To_Ask_Questions_The_Smart_Way](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220413_1649833811.png)
+
+#### 别像弱智一样提问
+
+![Stop-Ask-Questions-The-Stupid-Ways](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220413_1649835493.png)
