添加修改记录

--- a/日志2022.04.md
+++ b/日志2022.04.md
@@ -1169,3 +1169,82 @@ arm-linux-gnueabihf-gcc hello.c -o hello
 #### 别像弱智一样提问
 
 ![Stop-Ask-Questions-The-Stupid-Ways](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220413_1649835493.png)
+
+# 4.27
+
+#### 1.5、计数法
+
+计数法的含义顾名思义，就是利用一个变量，记录下某个数值出现了多少次。
+
+`vscode`调试是监控数组变量
+
+```c
+*(type(*)[number])begin
+// type，类型
+// number，查看数量
+// begin，起始地址指针
+```
+
+![image-20220428183731039](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/04/upgit_20220428_1651142251.png)
+
+##### [1748. 唯一元素的和](https://leetcode-cn.com/problems/sum-of-unique-elements/)
+
+##### [387. 字符串中的第一个唯一字符](https://leetcode-cn.com/problems/first-unique-character-in-a-string/)
+
+##### [1941. 检查是否所有字符出现次数相同](https://leetcode-cn.com/problems/check-if-all-characters-have-equal-number-of-occurrences/)
+
+##### [448. 找到所有数组中消失的数字](https://leetcode-cn.com/problems/find-all-numbers-disappeared-in-an-array/)
+
+##### [1512. 好数对的数目](https://leetcode-cn.com/problems/number-of-good-pairs/)
+
+##### [1711. 大餐计数](https://leetcode-cn.com/problems/count-good-meals/)
+
+# 4.28
+
+#### 1.6、日期算法
+
+蔡勒公式
+$$
+D= \frac{c}{4} -2c+y+ \frac{y}{4} +\frac{13(m+1)}{5}+d-1 \\
+W = D \bmod 7
+$$
+
+##### [1185. 一周中的第几天](https://leetcode-cn.com/problems/day-of-the-week/)
+
+##### [1154. 一年中的第几天](https://leetcode-cn.com/problems/day-of-the-year/)
+
+##### [1360. 日期之间隔几天](https://leetcode-cn.com/problems/number-of-days-between-two-dates/)
+
+#### 1.7素数判定
+
+1、整除性
+
+a整除b是指b是a的整数，a是b的约数，记作$a|b$
+
+任意性：$a|b$，对于任意整数$m$，有$am|bm$ 
+
+传递性：$a|b，b|c，则a|c$
+
+可消性：$a|bc，且a与c互素，则a|b$
+
+组合性：$c|a，c|b，对于任意整数m、n，有c(ma+nb)$
+
+2、素数与合数
+
+素数（质数），大于等于2，除了1和它本身无法别别的数整除
+
+其他大于1的整数称为合适
+
+1既不是合数也不是素数
+
+2是唯一的偶素数
+
+3、素数判定
+
+判断$n$是否为素数：
+
+3.1、对$n$做$\left[ 2,n \right)$范围内的数做求余判定，至少有一个可以整除表示$n$是合数，否则是素数
+
+3.2、假设$x$是$n$的因子，且是较小的哪一个，那么：$x \leq \frac{n}{x}$，即$x^2 \leq n \rightarrow \sqrt{n}$，此时只需要枚举$[2,\sqrt{n}]$范围内的数即可
+
+3.3、若$n$是合数，那么$n$必有一个小于等于$\sqrt{n}$的素因子，那么只需要对$\sqrt{n}$的素数进行测试即可
