--- a/日志2022.04.md
+++ b/日志2022.04.md
@@ -1248,3 +1248,22 @@ a整除b是指b是a的整数，a是b的约数，记作$a|b$
 3.2、假设$x$是$n$的因子，且是较小的哪一个，那么：$x \leq \frac{n}{x}$，即$x^2 \leq n \rightarrow \sqrt{n}$，此时只需要枚举$[2,\sqrt{n}]$范围内的数即可
 
 3.3、若$n$是合数，那么$n$必有一个小于等于$\sqrt{n}$的素因子，那么只需要对$\sqrt{n}$的素数进行测试即可
+
+# 4.28
+
+#### Ubuntu升级cmake
+
+```shell
+
+[参考链接](https://blog.51cto.com/u_15262460/2882793)
+
+wget -O cmake-3.18.2.tar.gz  https://github.com/Kitware/CMake/releases/download/v3.18.2/cmake-3.18.2.tar.gz
+tar zxvf cmake-3.18.2.tar.gz
+cd cmake-3.18.2
+
+./bootstrap # 电脑上没有安装cmake
+cmake -DCMAKE_INSTALL_PREFIX=/usr . # 电脑上安装了cmake
+
+make
+sudo make install
+```
