增加新日志

--- a/日志2022.05.md
+++ b/日志2022.05.md
@@ -1,3 +1,59 @@
 # 2022.05.04
 
 在另外一台Ubuntu上搭建vim环境
+
+问题：配置 YouCompleteMe 
+
+1、安装好 vim-plug 后，先在vim里使用`:PluginInstall YouCompleteMe`下载YouCompleteMe的文件包；然后回到vim的插件文件夹(~/.vim/plugged/YouCompleteMe)里编译支持C的YCM
+
+2、python3版本太低 -> 升级到python3.7及以上
+
+3、cmake版本太低 -> 升级cmake 
+```shell
+wget -O cmake-3.18.2.tar.gz  https://github.com/Kitware/CMake/releases/download/v3.18.2/cmake-3.18.2.tar.gz
+tar zxvf cmake-3.18.2.tar.gz
+cd cmake-3.18.2
+
+cmake -DCMAKE_INSTALL_PREFIX=/usr . # 本来有cmake
+./bootstrap # 本来没有cmake
+
+make
+make install
+
+```
+
+4、g++/gcc不支持C17标准 -> 升级gcc
+```shell
+sudo apt-get install g++-8
+sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 700 --slave /usr/bin/g++ g++ /usr/bin/g++-7
+sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 800 --slave /usr/bin/g++ g++ /usr/bin/g++-8
+
+```
+
+5、vim版本不够高 -> 升级vim
+```shell
+wget https://codeload.github.com/vim/vim/tar.gz/v8.2.1258
+mv v8.2.1258  vim-v8.2.1258.tar.gz
+tar -xvzf vim-v8.2.1258.tar.gz
+cd vim-8.2.1258/
+./configure --prefix=$HOME/.local --enable-python3interp=yes && make && make install
+
+# 链接
+echo "alias vim='~/.local/bin/vim'" >> ~/.bashrc
+```
+#2022.05.05
+
+## 配置环境
+
+相关软件工具
+```shell
+sudo apt-get install build-essential    # build-essential packages, include binary utilities, gcc, make, and so on
+sudo apt-get install man                # on-line reference manual
+sudo apt-get install gcc-doc            # on-line reference manual for gcc
+sudo apt-get install gdb                # GNU debugger
+sudo apt-get install git                # revision control system
+sudo apt-get install libreadline-dev    # a library used later
+sudo apt-get install libsdl2-dev        # a library used later
+sudo apt-get install llvm llvm-dev      # llvm project, which contains libraries used later
+```
+
