添加新日志

--- a/日志/日志2022.05.md
+++ b/日志/日志2022.05.md
@@ -2,7 +2,7 @@
 
 在另外一台Ubuntu上搭建vim环境
 
-问题：配置 YouCompleteMe 
+## 问题：配置 YouCompleteMe 
 
 1、安装好 vim-plug 后，先在vim里使用`:PluginInstall YouCompleteMe`下载YouCompleteMe的文件包；然后回到vim的插件文件夹(~/.vim/plugged/YouCompleteMe)里编译支持C的YCM
 
@@ -41,9 +41,23 @@ cd vim-8.2.1258/
 # 链接
 echo "alias vim='~/.local/bin/vim'" >> ~/.bashrc
 ```
-#2022.05.05
+**zsh autosuggestions在tmux环境下高亮问题处理**
+```shell
+# 在tmux环境下查看终端类型
+env | grep TERM
+TERM=screen
 
-## 配置环境
+# 在终端环境下
+env | grep TERM
+TERM=xterm-256color
+
+# 在.zshrc中加TERM配置
+echo "export TERM=xterm-256color" >> ~/.zshrc
+```
+
+# 2022.05.05
+
+## 前期准备
 
 相关软件工具
 ```shell
@@ -54,6 +68,1019 @@ sudo apt-get install gdb                # GNU debugger
 sudo apt-get install git                # revision control system
 sudo apt-get install libreadline-dev    # a library used later
 sudo apt-get install libsdl2-dev        # a library used later
+# 注意软件包默认llvm的版本，若低于11，则去找如何安装11及以上的版本
 sudo apt-get install llvm llvm-dev      # llvm project, which contains libraries used later
 ```
+添加github的ssh-key
 
+```shell
+cd  ~/.ssh
+ls # 检查有没有id_rsa_pub或id_dsa.pub文件
+
+ssh-keygen -t rsa -C "github邮箱"  #没有相关文件指向该指令，否则跳过
+
+将 id_rsa_pub或id_dsa.pub 里面的内容添加到github账户中 `setting --> SSH and GPG key --> SSH Keys --> New SSH key --> 自定义命名Title，把复制的内容粘贴到Key中`
+```
+
+下载文件：`git clone -b ysyx2204 git@github.com:OSCPU/ysyx-workbench.git`，修改Makefile里面的学号、名字
+
+下载代码
+```shell
+cd ysyx-workbench 
+bash init.sh nemu
+bash init.sh abstract-machine
+bash init.sh am-kernels
+bash init.sh nanos-lite
+bash init.sh navy-apps
+bash init.sh nvboard
+bash init.sh npc-chisel
+bash init.sh npc
+```
+# 2020.05.06
+
+## 编译nemu遇到的问题
+
+```shell
+# 1、提示llvm版本太低
+# 安装新版本的llvm
+llvm-as --version # 查看当前
+wget https://apt.llvm.org/llvm.sh
+chmod +x llvm.sh
+sudo ./llvm.sh 13
+# 1。1、提示缺少相关软件
+# 根据提示安装缺少的软件
+# 1.2、由于python3版本升级导致无法导入包 apt_pkg
+# 复制本来python36的包为python37，并重构软链接
+cd /usr/lib/python3/dist-packages/
+sudo cp apt_pkg.cpython-36m-x86_64-linux-gnu.so apt_pkg.cpython-37m-x86_64-linux-gnu.so #修改成自己的版本
+sudo ln -s apt_pkg.cpython-37m-x86_64-linux-gnu.so apt_pkg.so  #修改成自己的版本
+# 【来源：https://python.iitter.com/other/95030.html，转载请注明】
+# 1.3 出现 ImportError: cannot import name '_gi' from 'gi' 错误
+sudo ln -s /usr/lib/python3/dist-packages/gi/_gi.cpython-{36m,37m}-x86_64-linux-gnu.so
+# 再次执行llvm.sh脚本
+# 1.4 使用脚本更新llvm后，系统查看llvm的版本，依旧没有更新
+# 查看了网上不少方法，感觉比较繁琐，并且害怕失误后不好
+# 通过 which llvm-as 查看默认llvm所在问价夹为 /usr/bin/llvm-as ，在/usr/bin/ 文件夹下发现刚刚编译的llvm-13和默认llvm是都存在的，并且llvm-as链接的位置是/usr/lib/llvm-6.0，且llvm-as-13链接的位置是/usr/lib/llvm-13，且两个文件夹下bin文件夹中的内容基本相同，干脆把原来的llvm-6.0文件夹备份一下，然后把llvm-13文件夹改名为llvm-6.0，这样就不需要修改一大堆链接了
+cd /usr/lib
+sudo mv llvm-6.0 llvm-6.0-old
+sudo mv llvm-13 llvm-6.0
+```
+
+## 运行nemu的问题
+
+![image-20220506162106416](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/05/upgit_20220506_1651825267.png)
+
+项目在 `welcom()` 函数里添加了一个 `assert(0)`(断言)，程序运行到这里时正常的，需要到源码里面把这行代码注释掉，重新编译
+
+# 2022.05.07
+
+## 安装Verilator
+
+```shell
+# 安装依赖
+sudo apt-get install git perl python3 make autoconf g++ flex bison ccache libgoogle-perftools-dev numactl perl-doc libfl2 libfl-dev zlibc zlib1g zlib1g-dev
+
+# git 4.210 版本的源码
+git clone -b v4.210 https://github.com/verilator/verilator 
+
+# 构建
+unset VERILATOR_ROOT  # For bash
+cd verilator
+autoconf         # Create ./configure script./configure --prefix /opt/verilator-4210 # 安装在指定位置
+make -j4
+make test
+sudo make install
+
+# 在.bashrc中加入环境变量
+export PATH=$PATH:/opt/verilator-4210/bin
+
+# 查看版本号
+verilator --version
+Verilator 4.210 2021-07-07 rev v4.210
+
+```
+
+跑一遍verilator官网的例程
+https://verilator.org/guide/latest/example_cc.html#example-c-execution
+
+编译运行例程源码
+```shell
+verilator -Wall --cc --exe --build sim_main.cpp our.v
+# -Wall	启用更严格的lint警告
+# --cc	获得C++输出
+# --exe	连同cpp文件，创建一个可执行文件，而不仅仅是一个库文件
+# --build	verilator自己调用make
+# our.v	SystemVerilog 设计文件
+
+# 运行
+obj_dir/Vour
+```
+
+使用指令编译ysyx的例程
+```shell
+cd ~/ysyx-workbench/npc
+verilator -Wall --cc --exe --build csrc/main.cpp vsrc/example.v
+# 运行
+obj_dir/Vexample
+```
+
+**注** 之后电脑重启后再次编译出现找不到头文件的错误
+```shell
+make: 进入目录“/home/dingfang/test_our/obj_dir”
+Vour.mk:55: /opt/verilator-4210/include/verilated.mk: 没有那个文件或目录
+make: *** 没有规则可制作目标“/opt/verilator-4210/include/verilated.mk”。 停止。
+make: 离开目录“/home/dingfang/test_our/obj_dir”
+%Error: make -C obj_dir -f Vour.mk exited with 2
+%Error: Command Failed /opt/verilator-4210/bin/verilator_bin -Wall --cc --exe --build sim_main.cpp our.v
+```
+解决方法
+```shell
+# 修改.bashrc的环境变量
+export VERILATOR_ROOT=/opt/verilator-4210
+export PATH=$PATH:$VERILATOR_ROOT/bin
+
+# 设置软链接
+sudo ln -s $VERILATOR_ROOT/share/verilator/include $VERILATOR_ROOT/include
+sudo ln -s $VERILATOR_ROOT/share/verilator/bin/verilator_includer   $VERILATOR_ROOT/bin/verilator_includer
+```
+
+修改ysyx/npc的Makefile
+
+# 2022.05.08
+
+## 安装vim的markdown插件
+
+```shell
+
+Plug 'godlygeek/tabular' "必要插件，安装在vim-markdown前面
+Plug 'plasticboy/vim-markdown'
+
+```
+
+## 示例 SystemC 执行报错
+
+```shell
+%Error: Need $SYSTEMC_INCLUDE in environment or when Verilator configured,
+and need $SYSTEMC_LIBDIR in environment or when Verilator configured
+Probably System-C isn't installed, see http://www.systemc.org
+```
+
+解决方法
+
+```shell
+# 去systomc官网下载源码包
+https://systemc.org/resources/standards/
+# 解压包
+cd systemc-2.3.3
+# 编译
+mkdir objdir
+cd objdir
+sudo mkdir -p /usr/local/systemc233
+../configure  -prefix=/usr/local/systemc233
+make -j4
+sudo make install
+# 添加环境变量
+export SYSTEMC=/usr/local/systemc233
+export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$SYSTEMC/lib-linux64
+```
+
+再次编译，执行`make -j -C obj_dir -f Vour.mk Vour`时报错
+
+```shell
+g++     -L/usr/local/systemc233/lib-linux sc_main.o verilated.o Vour__ALL.a     -lsystemc -o Vour
+/usr/bin/ld: 找不到 -lsystemc
+collect2: error: ld returned 1 exit status
+Vour.mk:65: recipe for target 'Vour' failed
+```
+
+查找了以下，确认lsystemc(libsystemc.so)文件是在`/usr/local/systemc233/lib-linux64`文件夹下的，在回看报错提示，默认的链接地址指向的是`/usr/local/systemc233/lib-linux6`，但安装systemc时默认时`lib-linux64`文件夹，决定将文件夹`lib-linux64`重命名为`lib-linux`，并注释环境变量`export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$SYSTEMC/lib-linux64`，这条好像没有失效.
+
+再次编译正常
+
+```shell
+dingfang@dingfang-Inspiron-5457:~/test_our_sc$ make -j -C obj_dir -f Vour.mk Vour
+make: 进入目录“/home/dingfang/test_our_sc/obj_dir”
+g++     -L/usr/local/systemc233/lib-linux sc_main.o verilated.o Vour__ALL.a     -lsystemc -o Vour
+make: 离开目录“/home/dingfang/test_our_sc/obj_dir”
+dingfang@dingfang-Inspiron-5457:~/test_our_sc$ obj_dir/Vour 
+
+        SystemC 2.3.3-Accellera --- May  8 2022 10:26:41
+        Copyright (c) 1996-2018 by all Contributors,
+        ALL RIGHTS RESERVED
+Hello World
+- our.v:4: Verilog $finish
+```
+
+安装了几个vim插件
+
+#  2022.05.11
+
+## 夜深人静写算法-03-初等数论
+
+### 一、数论基本概念
+
+**1、整除性**
+
+a、b都是整数，a整除b --> b是a的整数倍 --> a是b的约数(因数、因子)，记作$a|b$
+
+<span id=任意性> 1)、任意性：若$a|b$ 则 $\forall{m} \in {N^+}, am|bm$]</span >
+
+<span id=传递性> 2)、传递性：若 $a|b,b|c$ 则 $a|c$]</span >
+
+<span id=可消性> 3)、可消性：若 $a|bc,且 b和c互素$ ，则$a|c$]</span >
+
+<span id=组合性> 4)、组合性：若 $a|c,a|b$ 则 $\forall{m、n} \in {N^+}，a|(mc+nb)$]</span >
+
+*例：*$x,y,x \in Z$ 若 $11|(7x+2y-5z)$ 求证 $11|(3x-7y+12z)$
+
+*解：*设$a=7x+2y-5z,b=3x-7y+12z$
+$$
+\begin{array}{l}
+ma+nb&=(7m+3n)x+(2m-7n)y+(-5m+12n)z\\
+&=11(px+qy+sz)\\  
+&注：m、n、p、q、s\in Z,m、n \neq 0 \\
+\end{array}
+$$
+
+$$
+\begin{array}{l}
+&7m+3n=11p	\qquad (1)\\
+&2m-7n=11q	\qquad (2)\\
+&12n-5m=11s	\qquad (3)\\
+& (1)-(2)+(3) \\
+& 22n=11(p-q+s) \Longrightarrow 2n=p-q+s	\\
+& (3)+3(1)+3(2)	\\
+& 22m=11(p+3q+3s) \Longrightarrow 2m=p+3q+3s	\\
+& 2p+3s=m+3n	\\
+& 2q+s=m-n
+\end{array}
+$$
+
+求一组符合条件的整数，使得上述等式成立
+
+取$m=3、n=4$，可计算得一组合适得$p、q、s，p=3,q=-2,s=3$
+
+通过构造可得：$3a+4b=11(3x-2y+3z)$
+
+由[组合性](#组合性)得 $11|(3d+4b),11|a\Longrightarrow 11|(3a+4b-3a)\Longrightarrow 11|4b$
+
+由[可消性](#可消性)得$11|4b,且4和11互素\Longrightarrow 11|b$
+
+**2、素数**
+
+1)、素数和合数
+
+素数又称质数，素数首先满足条件是要大于等于 2，并且除了 1 和它本身外，不能被其它任何自然数整除；
+
+其它的数称为合数；
+
+而 1 既非素数也非合数；特殊的，2 是唯一的偶素数。
+
+2)、素数判定
+
+- 简单算法：
+
+对n做$[2,n)$范围内的余数判定，$\exists i\in[2,n),若n\%i=0$，那么n是合数，否则n是素数。
+
+- 优化1：
+
+若存在a能整除n，即$a|n$，那么$\frac{n}{a}$也可以整除n，设$a \leqslant \frac{n}{a}$，则有$a^2 \leqslant n$，即$a \leqslant \sqrt{n}$，。因此，只需要在$[2,\sqrt{n}]$范围内寻找是否存在a，使得$n\%a=0$。
+
+- 优化2：
+
+若n是合数，那么n必然后一个在$[2,\sqrt{n}]$范围内的素因子，只需要判断$[2,\sqrt{n}]$范围内的素因子是否能整除n，若存在，则n是合数，若不存在则n是素数。
+
+3)、素数定理
+
+当$x$很大时，小于$x$的素数的个数接近于$\frac{x}{\ln{x}}$，$\ln x$是$x$的自然对数。用$\pi{(x)}$表示不大于x的素数个数：
+$$
+\lim _{x \rightarrow \infty} \frac{\pi(x)}{x / \ln (x)}=1
+$$
+4)、素数筛选法
+
+Eratosthenes筛选法
+
+```c++
+#define maxp 65535
+#define ll long long
+
+int primes[maxp];
+bool notprime[maxp];	// 全局变量已初始化为false，默认全是素数
+
+void Eratosthenes(){
+	notprime[1]=true;
+	primes[0]=0;	// primes[0]表示素数的个数
+	for(int i=2; i<maxp; i++){
+		if(!notprime[i]){	// 如果notprime[i]是素数
+			primes[++primes[0]] = i;	//prime[0]记录素数的个数，加1；将素数的值保存到prime[++primr[0]]中
+			for(ll j=(ll)i*i; j<maxp; j+=i){	//从i*i开始筛选掉i的倍数
+				notprime[j]=true;
+			}
+		}
+	}
+}
+```
+
+欧拉筛选法
+
+```c
+int primes[maxp];
+int notprime[maxp];    // 全局变量已初始化为false，默认全是素数
+void Euler()
+{
+	memset(notprime, 0, sizeof(notprime));
+	int num=0;
+	primes[0]=0;
+	notprime[1]=1;
+	for(int i=2; i<maxp; i++){
+		if(notprime[i] == 0){
+			primes[++primes[0]]=i;
+		}
+		for(int j=1; j<=num && i*primes[j]<=maxp; j++){
+			notprime[i*primes[j]]=1;	// 对已有num个素数，将i的素数倍全部筛选掉
+			if(i%primes[j] == 0)	// 判断现有的素数有没有i的最小素因子，若有，则不需要继续判断
+				break;
+		}
+	}
+	primes[0]=num;
+}
+```
+
+对于大于$10^7$的数，使用$拉宾-米勒(Rabin−MillerRabin)素性检验$来判断是否为素数
+
+**3、因数分解**
+
+1)、算术基本定理
+
+算术基本定理可以描述为：对于每个整数 n ，都可以唯一分解成素数的乘积，如下：
+$$
+\begin{gathered}
+n=p_{1} p_{2} p_{3} \ldots p_{k} \quad 
+\left(1 < p_{1} \leq p_{2} \leq p_{3} \leq \ldots \leq p_{k} \in N^+\right)
+\end{gathered}
+$$
+这里的素数并不要求是不一样的，所以可以将相同的素数进行合并，采用素数幂的乘积进行表示，如下：
+$$
+\begin{gathered}
+n=p_{1}^{e_{1}} p_{2}^{e_{2}} p_{3}^{e_{3}} \ldots p_{k}^{e_{k}} \quad 
+\left(1< p_{1}<p_{2}<p_{3}<\ldots<p_{k} \text { and } e_{i}、p_i \in N^+ \right)
+\end{gathered}
+$$
+2)、素数拆分
+
+假设$n=pm，m>1$，其中$p$是素数，若$p>\sqrt{n}$，那么$m$必有一个小于等于$\sqrt{n}$的素因数，因此，设$p\leq \sqrt{n}$。
+
+枚举$[2,\sqrt{n}]$内的素数，若能找到一个素数$p$使得$n\%p=0$，那么$m=\frac{n}{p}$，并且$p$也可能是$m$的一个素因子，所以若$p|m$，则需要继续进行试除，令$m^{\prime}=\frac{m}{p}$，直到将所有的素因子$p$除净，统计整除的次数$e$，那么$n=p^e*n^{\prime}$；然后继续枚举素数，对$n^{\prime}$做同样的试除操作。
+
+枚举完$[2,\sqrt{n}]$内的所有素数后，可以得到：
+$$
+n=p_{1}^{e_{1}} p_{2}^{e_{2}} p_{3}^{e_{3}} \ldots p_{k}^{e_{k}} S
+$$
+若$S=1$，那么素数分解完毕
+
+若$S>1$，那么$S$必为素数，且大于$\sqrt{n}$，并且最多只有一个S，若$n$本身就是素数，那么$n=S$。
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#define maxp 1000000
+#define ll long long
+
+int primes[maxp];
+int notprime[maxp]; // 全局变量已初始化为false，默认全是素数
+int count = 0;
+
+struct factor
+{
+    int data;
+    int num;
+};
+
+
+void Euler()
+{
+    memset(notprime, 0, sizeof(notprime));
+    int num = 0;
+    primes[0] = 0;
+    notprime[1] = 1;
+    for (int i = 2; i < maxp; i++)
+    {
+        if (notprime[i] == 0)
+        {
+            primes[++num] = i;
+        }
+        for (int j = 1; j <= num && i * primes[j] <= maxp; j++)
+        {
+            notprime[i * primes[j]] = 1; // 已有num个素数 将i的素数倍全部筛选掉
+            count++;
+            if (i % primes[j] == 0) // 判断现有的素数有没有i的最小素因子，若有，则不需要继续判断
+                break;
+        }
+    }
+    primes[0] = num;
+}
+
+void Factorization(int n)
+{
+    struct factor *new=malloc(sizeof(struct factor)*primes[0]);
+    if (n == 1)
+    {
+        printf("\n");
+        return;
+    }
+    int count=0;
+    for (int i = 1; i <= primes[0]; i++)
+    {
+        if (n % primes[i] == 0)
+        {
+            // printf("\n--%d \n",i);
+            (new+count)->data=primes[i];
+            (new+count)->num=0;
+            while (n % primes[i] == 0)
+            {
+                n /= primes[i];
+                (new+count)->num++;
+                // printf("%d*", primes[i]);
+            }
+            count++;
+        }
+        if (n == 1)
+        {
+            printf("%d \n",count);
+            
+            for(; count>0;){
+                printf("%d^%d",(new+count-1)->data,(new+count-1)->num);
+                count--;
+                if(count>0)
+                    printf(" * ");
+                else{
+                    printf("\n");
+                    break;
+                }
+            }
+            return;
+        }
+    }
+    free(new);
+}
+
+int main()
+{
+    int data;
+    scanf("%d", &data);
+    Euler();
+    Factorization(data);
+    return 0;
+}
+```
+
+3)、因子个数
+
+枚举$[1,\sqrt{n}]$范围内的因子数即可得到$n$的因子数
+
+由上一节可知，n可以表示为：$n=p_{1}^{e_{1}} p_{2}^{e_{2}} p_{3}^{e_{3}} \ldots p_{k}^{e_{k}} $，总的因子个数记为 $g(n)$对于$e^i + 1$的连乘
+$$
+g(n)=\prod_{i=1}^{k}\left(e_{i}+1\right)
+$$
+**例：**给定$x,y(x,y<2^{31})$，求$x^y$的因子数
+
+*解：*先将$x$因式分解：
+$$
+\begin{aligned}
+x^{y} &=\left(p_{1}^{e_{1}} p_{2}^{e_{2}} p_{3}^{e_{3}} \ldots p_{k}^{e_{k}}\right)^{y} \\
+&=p_{1}^{y \epsilon_{1}} p_{2}^{\text {ye2 }} p_{3}^{\text {ye }} \cdots p_{k}^{y e_{k}}
+\end{aligned}
+$$
+套用因子数格式得：
+$$
+g\left(x^{y}\right) =\prod_{i=1}^{k}\left(y e_{i}+1\right) 
+$$
+4)、因子和
+
+设n的因子和为$s(n)$，设最小素因数$p_1$，对应的个数为$e_1$，那么$n={p_1}^{e_1}n^{\prime}$。
+
+记$n^{\prime}$的因子和为$s(n^{\prime})$，$p_1^0s(n^{\prime})、p_1^1s(n^{\prime}) \cdots p_1^{e_1}s(n^{\prime})$都是n的因子和，且不重复，因此：$(s(n)=p_1^0+p_1^1+ \cdots +p_1^{e_1})s(n^{\prime})=\frac{p_1^{e_1+1}-1}{p_1-1}s(n^{\prime})$；
+
+用同样的方法计算$s(n^{\prime})$的因子和；
+
+递归可得：
+$$
+s(n)=\prod_{i=1}^{k} \frac{p_{i}^{e_{i}+1}-1}{p_{i}-1}
+$$
+*注：*$p_1<p_2 <\cdots <p_k$依次为n从小到大排列的素因数，$n=p_{1}^{e_{1}} p_{2}^{e_{2}} p_{3}^{e_{3}} \ldots p_{k}^{e_{k}} $。
+
+**例：**给定$x,y(x,y<2^{31})$，求$x^y$的因子和
+
+*解：*将$x$因式分解得：
+$$
+\begin{aligned}
+x^{y} &=\left(p_{1}^{e_{1}} p_{2}^{e_{2}} p_{3}^{e_{3}} \ldots p_{k}^{e_{k}}\right)^{y} \\
+&=p_{1}^{y \epsilon_{1}} p_{2}^{\text {ye2 }} p_{3}^{\text {ye }} \cdots p_{k}^{y e_{k}}
+\end{aligned}
+$$
+套用公式可得：
+$$
+s(x^y)=\prod_{i=1}^{k} \frac{p_{i}^{ye_{i}+1}-1}{p_{i}-1}
+$$
+**4、最大公约数(GCD)和最小公倍数(LCM)**
+
+两个数a和b的最大公约数 (Greatest Common Divisor) 是指同时整除b和b的最大因数，记为$gcd(a,b)$。特殊的，当$gcd(a,b)=1$，我们称a和b互素。
+
+两个数a和b的最小公倍数 (Leatest Common Multiple) 是指同时被a和b整除的最小倍数，记为$lcd(a,b)$。特殊的，当a和b互素时，$lcd(a,b)=ab$。
+
+求解$gcd$一般采用辗转相除法，而求$lcm$需要先求$gcd$，然后容易得到：
+$$
+lcm(a,b)=\frac{ab}{gcd(a,b)}
+$$
+$a、b\text{满足下列分解}$
+$$
+\begin{gathered}
+a=p_{1}^{x_{1}} p_{2}^{x_{2}} p_{3}^{x_{3}} \ldots p_{k}^{x_{k}} \\
+b=p_{1}^{y_{1}} p_{2}^{y_{2}} p_{3}^{y_{3}} \ldots p_{k}^{y k} \\
+\end{gathered}
+$$
+$\text{那么}gcd(a, b)\text{和}lcd(a,b)\text{可以表示为：} $
+$$
+\begin{gathered}
+g c d(a, b)=p_{1}^{\min \left(x_{1}, y_{1}\right)} p_{2}^{\min \left(x_{2}, y_{2}\right)} p_{3}^{\min \left(x_{3}, y_{3}\right)} \ldots p_{k}^{\min \left(x_{k}, y_{k}\right)} \\
+l c m(a, b)=p_{1}^{\max \left(x_{1}, y_{1}\right)} p_{2}^{\max \left(x_{2}, y_{2}\right)} p_{3}^{\max \left(x_{3}, y_{3}\right)} \ldots p_{k}^{\max \left(x_{k}, y_{k}\right)}
+\end{gathered}
+$$
+这里的a和b的分解式中的指数是可以为 0 的，也就是说$p_1$是a和b中某一个数的最小素因子，$p_2$是次小的素因子。$lcm(a,b) 和 gcd(a,b)$相乘，相当于等式右边的每个素因子的指数相加，即$min(x_i, y_i) + max(x_i, y_i) = x_i + y_i$，正好对应了a和b的第i个素数分量的指数之和，从而得到：
+$$
+ab=lcm(a,b)gcd(a,b)
+$$
+**例：**三个未知数$x,y,z$，且$gcd(x,y,z)=G，lcm(x,y,z)=L$，$G$和$L$已知，求$(x,y,z)$三元组的个数。(即有多少组$x,y,z$满足$G和L$)
+
+*解：*
+$$
+\begin{gathered}
+x=p_{1}^{a_{1}} p_{2}^{a_{2}} p_{3}^{a_{3}} \ldots p_{k}^{a_{k}}	\\
+y=p_{1}^{b_{1}} p_{2}^{b_{2}} p_{3}^{b_{3}} \ldots p_{k}^{b_{k}}	\\
+z=p_{1}^{c_{1}} p_{2}^{c_{2}} p_{3}^{c_{3}} \ldots p_{k}^{c_{k}}	\\
+\end{gathered}
+$$
+
+$$
+gcd(a, b)=p_{1}^{\min \left(a_{1}, b_{1} ,c_1 \right)} p_{2}^{\min \left(a_{2}, b_{2},c_2\right)} p_{3}^{\min \left(a_{3}, b_{3},c_3\right)} \ldots p_{k}^{\min \left(a_{k}, b_{k} c_k\right)} \\
+lcm(a, b)=p_{1}^{\max \left(a_{1}, b_{1} ,c_1\right)} p_{2}^{\max \left(a_{2}, b_{2},c_2\right)} p_{3}^{\max \left((a_{3}, b_{3},c_3\right)} \ldots p_{k}^{\max \left(a_{k}, b_{k} c_k\right)}
+$$
+
+对于单个素因子$p_i$，在$L$中得指数为$l$，在$G$中得指数为$g$，问题转换成满足$\min{(a_i,b_i,c_i)}=g，\max{(a_i,b_i,c_i)}=l$的$a_i、b_i、c_i$有多少组，三个数中最小值为$g$，最大值为$l$，另外一个数在$[g,l]$之间，对于特殊情况$g=l$，排列组合只有一种，对于一般的情况则有$6(l-g)$种排列组合方式：
+
+| $(a_i,b_i,c_i)$        | 排列方式                                                  |
+| ---------------------- | --------------------------------------------------------- |
+| $(g,l,l)$              | 3                                                         |
+| $(g,g,l)$              | 3                                                         |
+| $(g,k,l)$，其中$g<k<l$ | $6(l-g-1)$，k有$l-g-1$种取值方式，每一种方式有6种排列方法 |
+
+$$
+sum=\prod_{i=1}^{k} f(i)	\\
+f(i)=
+\begin{cases}
+	6\left(l_{i}-g_{i}\right) & l_{i}>g_{i} \\ 
+	1 & l_{i}=g_i
+\end{cases}
+$$
+
+**5、同余**
+
+1)、模运算
+
+给定$p\in N^+$，对$\forall n \in Z$，一定存在等式$n=kp+r$，其中$k、r \in Z，且 0 \leq r < p$，称$k$是$n$除以$p$的商，$r$是$n$除以$p$的余数。(用$\%$表示取模运算)。
+
+对于$a \in Z^+，b \in Z$，定义如下运算：
+
+- 取模运算：$a\%b$或$a \bmod b$，表示$a$除以$b$的余数
+- 加法:$(a+b)\%p = (a\%p+b\%p)\%p$
+- 减法:$(a-b)\%p=(a\%p-b\%p)\%p$
+- 乘法:$(a*b)\%p=[(a\%p)*(b\%p)]\%p$
+- 幂:$(a^b)\%p=[(a\%p)^b]\%p$
+- 模运算满足交换律、结合律和分配律
+- $a \equiv b (\bmod n)$，表示$a$和$b$模$n$同余，即$a\%n=b\%n$
+
+2)、快速幂取模
+
+给定整数a，正整数n，以及非零整数p，求$a^n \% p$。使用递归求解，令：
+$$
+f(n)=a^n\%p
+$$
+递推可得：
+$$
+f(n)=[a*f(n-1)]\%p
+$$
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main()
+{
+    int a,b,c ; 
+    scanf("%d %d %d",&a, &b, &c);
+    printf("输入的值为 %d %d %d\n",a,b,c );
+    int ans=1%c;
+    while (b--)
+    {
+        ans = (ans*(a % c))%c;
+    }
+    printf("%d\n",ans);
+    return 0;
+}
+```
+
+二分快速幂：
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+#define ll long long
+ll mod1(ll a, ll b, ll c)
+{
+    if (b == 0)
+        return 1 % c;
+    ll ans = 1 % c;
+    while (b--)
+    {
+        ans = (ans * (a % c)) % c;
+    }
+    return ans;
+}
+ll mod2(ll a, ll b, ll c)
+{
+    if (b == 0)
+        return 1 % c;
+
+    ll ans = mod2(a * a % c, (b >> 1), c);
+    if (b & 1)
+        ans = ans * a % c;
+    return ans;
+}
+ll mod3(ll a, ll b, ll c)
+{
+    ll ans = 1;
+    while(b) {
+        if(b & 1) 
+            ans = ans * a % c;     // 1）
+        a = a * a % c;                   // 2）
+        b >>= 1;                         // 3）
+    }
+    return ans;
+}
+
+ll Product_Mod(ll a, ll b, ll c) {
+    ll sum = 0;
+    while(b) {
+        if(b & 1) 
+            sum = (sum + a) % c;
+        a = (a + a) % c;
+        b >>= 1;
+    }
+    return sum;
+}
+ll mod4(ll a, ll b, ll c) {
+    ll ans = 1;
+    while(b) {
+        if(b & 1) 
+            ans = Product_Mod(ans, a, c);
+        a = Product_Mod(a, a, c);
+        b >>= 1;
+    }
+    return ans;
+}
+
+int main()
+{
+    ll a, b, c;
+    scanf("%lld %lld %lld", &a, &b, &c);
+    printf("输入的值为 %lld %lld %lld\n", a, b, c);
+
+    printf("mod1 %lld\n", mod1(a, b, c));
+    printf("mod2 %lld\n", mod2(a, b, c));
+    printf("mod3 %lld\n", mod3(a, b, c));
+    printf("mod4 %lld\n", mod4(a, b, c));
+    return 0;
+}
+```
+
+3)、循环节
+
+**例：**$f[1]=a,f[2]=b,f[3]=c，当n>3时，f[n]=(Af[n-1]+Bf[n-2]+Cf[n-3])\%54$，给定$a,b,c,A,B,C$，求$f[n]，其中n<2^{31}$。
+
+*解：*当$n>3$时，$f[n] \in [0,54)$，并且连续的三个数$f[n-1],f[n-2],f[n-3]$确定后$f[n]$也就确定了，而$f[n-1],f[n-2],f[n-3]$三个数的组合有$54*54*54$种情况；
+
+对于一个下标$k<n$，假设$f[k]$已经求出，且满足$f[k-1]=f[n-1],f[k-2]=f[n-2],f[k-3]=f[n-3]$，那么$f[n]=f[k]$，这里$[k,\cdots ,n-1]$这个序列叫做循环节；
+
+在$54*54*54$次计算内必定出现循环节。
+
+### 二、数论基础知识
+
+#### **1、欧几里德定理(辗转相除法)**
+
+$$
+gcd(a,b)=gcd(b,a\%b)
+$$
+*证明：*
+
+不妨设$a>b$，那么$a=kb+r=kb+a\%b$，即$a\%b=a-kb$；
+
+令$d$是$a$和$b$的公约数，由于$d|a,a|b$，有$d|(a-kb)\Longrightarrow d|(a\%b)$；
+
+这说明，若$d$是$a$和$b$的公约数，那么$d$也是$a$和$a\%b$的公约数，因此$gcd(a,b)=gcd(b,a\%b)$
+
+用递归实现如下：
+
+```c
+Type gcd(Type a, Type b) {	
+    if(b != 0)
+        return gcd(b, a%b);
+    else
+        return a;
+}
+```
+
+一个约定俗成的概念：任何非零整数和零的最大公约数为它本身。
+
+**例：**$f[0]=0，n>1时，f[n]=(f[n-1]+a)\%b$，给定$a,b$，是否存在一个自然数$k\in[0,b)$是$f[n]$永远取不到的？
+
+*解：*这里的$f[n]$一定是有循环节的，若$k$不在循环节内，那就自然取不到$k$了；
+$$
+\begin{aligned}
+&f[0]=0	\\
+&f[1]=(0+a)\%b=a\%b	\\
+&f[2]=(a\%b+a)\%b=2a\%b	\\
+& \cdots 	\\
+&f[n]=an\%d
+\end{aligned}
+$$
+令$an=mb+r$，那么$r=f[n]$；
+
+设$t=gcd(a,b),r=an-mb=t(\frac{a}{t}n-\frac{b}{t}m)$，那么$t|r$；
+
+当$t=1$时，满足$\forall r \in N$使得$t|r$成立，即$\exists a,b \in Z$，使得$ f[n]$能取任意自然数；
+
+当$t>1$时，$\exists r，对于 \forall a,b \in Z 使得 r \neq an-mb $
+
+#### **2、扩展欧几里德定理**
+
+##### 1)、线性同余
+
+线性同余方程（也叫模线性方程）是最基本的同余方程，即$a x \equiv b \quad(\bmod n)$(即$ax\%n=b\%n$)，其中，$a,b,n为常量，x为未知数$；
+
+当且仅当b能够被a与n德最大公约数整除时(即$gcd(a,n)|b$)，此方程有解；
+
+$x_0$是方程的一个解，那么方程的所有解可以表示为$\{ x_0 + k\frac{n}{d} | k\in Z\}$，其中，$d=gcd(a,n)$；
+
+例如：
+
+3*x* ≡ 2 (**mod** 6)，2%6=2，3x%6=x%2，不存在x满足x%2=2，所以方程无解。
+
+5*x* ≡ 2 (**mod** 6)，2%6=2，寻找5x%6=2，当x=4时，满足条件，所以方程有解。
+
+$a x \equiv b \quad(\bmod n)$转换可得$ax=kn+b \quad k \in Z$，
+
+也可转换为更一般的形式$Ax+By+C=0$；
+
+这个方程就是二维空间中的直线方程，但是x和y的取值为整数，所以这个方程的解是一些排列成直线的点集。
+
+##### 2)、同余方程求解
+
+- 求解同余方程第一步是转化成一般式：$Ax+By=C$
+
+首先求解出$a,b$的最大公约数$d=gcd(A,B)$，那么原方程可以转换为$d(\frac{A}{d}x+\frac{B}{d}y)=C$，已知$(\frac{A}{d}x+\frac{B}{d}y)$为整数，若d不能整除C，那么方程必然无解；
+
+由上述可知，若方程有解，则$Ax+By=C=gcd(A,B)*C^{\prime}$；
+$$
+\begin{aligned}
+d &=\operatorname{gcd}(A, B) \\
+&=\operatorname{gcd}(B, A \% B) \\
+&=B x^{\prime}+(A \% B) y^{\prime} \\
+&=B x^{\prime}+\left[A-B * \frac{A}{B}\right] y^{\prime} \\
+&=A y^{\prime}+B\left[x^{\prime}-\frac{A}{B} y^{\prime}\right] \\
+x &=y^{\prime}, y=x^{\prime}-\left(\frac{A}{B}\right) y^{\prime}
+\end{aligned}
+$$
+*注：*这里的$\frac{A}{B}$是求整数除法
+
+由于$gcd(A,B)$是一个递归的计算，所以在求解$(x,y) $时，$(x', y')$其实已经利用递归计算出来了，递归出口为 B = 0 的时候（对比辗转相除，也是 B = 0 的时候递归结束），那么这时方程的解$x_0 = 1, y_0 = 0$。
+
+```c
+// aX + bY = 1 
+Type ExpGcd(Type A, Type B, Type &X, Type &Y) {
+    Type q, temp;
+    if( b != 0 ) {
+        q = A; X = 1; Y = 0;
+        return q;
+    }else {
+        q = ExpGcd(B, A % b, X, Y);
+        temp = X; 
+        X = Y;
+        Y = temp - (A / B) * Y;
+        return q;
+    }
+}
+```
+
+扩展欧几里德算法 和 欧几里德算法 的返回值一致，都是$gcd(a,b)$，传参多了两个未知数 X,Y，采用引用的形式进行传递，对应上文提到的$x,y$，递归出口为$B=0$，这时返回值为当前的A，因为$gcd(a,0)=a$，$(X,Y) $初值为$(1,0)$，然后经过回溯不断计算新的$(X,Y)$，这个计算是利用了之前的$(X,Y) $进行迭代计算的，直到回溯到最上层算法终止。最后得到的$(X,Y) $就是方程$gcd(A,B)=Ax+By $的解。
+
+通过扩展欧几里德求得的是$Ax+By=gcd(A,B)$的解；
+
+将$(x_0,y_0)$代入原方程中，$Ax_0+By_0=gcd(A,B)$；
+
+若求$Ax+By=C=gcd(A,B)*C^{\prime}$，将上式代入到$Ax_0+By_0=gcd(A,B)$中，得：$Ax+By=C=(Ax_0+By_0)*C^{\prime}$，$x=x_0c^{\prime},y=y_0c^{\prime}$，这只是方程得一组解，通解为
+
+$x=\{x_0c^{\prime}+k\frac{B}{gcd(A,B)}|k\in Z\}$，y得值需要将x代入原方程求解。
+
+**例：**有两只青蛙，青蛙 A 和 青蛙 B ，它们在一个首尾相接的数轴上。设青蛙 A 的出发点坐标是x，青蛙 B 的出发点坐标是y 。青蛙A一次能跳m米，青蛙 B 一次能跳n米，两只青蛙跳一次所花费的时间相同。数轴总长L米。要求它们至少跳了几次以后才会碰面。
+
+*解：*假设跳了t次后相遇，
+$$
+(x+mt)\%L=(y+nt)\%L	\\
+(m-n)t\%L=(y-x)\%L	\\
+(m-n)t \equiv (y-x) \quad (\bmod L)
+$$
+利用扩展欧几里德定理求得t得通解$t_0\frac{y-x}{gcd(m-n, L)}+k\frac{L}{gcd(m-n,L)}=T_0+kd,k\in Z$，$T_0$不一定是最小正整数，也可能是负数，对解做以下处理$ans=(T_0\%d+d)\%d$。
+
+3)、逆元
+
+模线性方程$a b \equiv 1 \quad(\bmod n)$，称a和b关于模n互为模倒数(模逆元)
+
+$$
+b \equiv \frac{1}{a} \pmod{n}\ \ \ \ 或\ \ \ \ b \equiv a^{-1} \pmod{n}
+$$
+求$a$模n的逆元，就是模线性方程$a x \equiv b \quad(\bmod n)$中$b=1$的特殊形式，且$gcd(a,n)>1$时，逆不存在。
+
+#### **3、中国剩余定理**
+
+中国剩余定理是求解**模线性方程组**的解
+
+对于所有给定的常数$a_i$和$m_i$，求一个最小$x$满足下列方程组：
+$$
+\left\{\begin{array}{c}
+x \equiv a_{1}\left(\bmod m_{1}\right) \\
+x \equiv a_{2}\left(\bmod m_{2}\right) \\
+\vdots \\
+x \equiv a_{n}\left(\bmod m_{n}\right)
+\end{array}\right.
+$$
+
+#### **4、欧拉函数**
+
+##### 1)、互素
+
+若$gcd(a,b)=1$，那么a和b互素；
+
+如何求不大于n，且与n互素的个数？
+
+- 朴素算法
+
+从1~n枚举i，当$gcd(i,n)=1$时，计数器加1，时间复杂度为$O(n)$。
+
+- 优化算法
+
+使用$\phi(n)$表示不大于n且与n互素的数的个数，称为**欧拉函数**；
+
+若n是一个素数，那么n和所有小于n的数都互素，$\phi(n)=n-1$；
+
+如果n是素数p的k次幂，即$n=p^k$，那么$\phi(n)=p^k-p^{k-1}$(除了是p倍数且小于n的数，都和n互素)；
+
+若m和n互素，那么$\phi(mn)=\phi(m)\phi(n)$；
+
+$m=p^a,n=q^b$，$mn$可以表示为：$p^aq^b$，其中，$p,q$为2个不同的素数，$a,b\geq 1$，用$k(p^aq^b,p)$表示小于等于$p^a q^b$的数中p的倍数的个数
+$$
+k(p^aq^b,p)=p^{a-1}q^b	\\
+k(p^aq^b,q)=p^aq^{b-1}
+$$
+$k(p^aq^b,p)$与$k(p^aq^b,q)$中的重叠部分(即使p的倍数又是q的倍数)的个数为：$k(p^aq^b,pq)=p^{a-1}q^{b-1}$；
+
+( p的倍数但非q的倍数 + q的倍数但非p的倍数 -pq的公倍数 + 与pq互素的数 )的个数 = $p^a q^b$
+$$
+p^a q^b=k(p^a q^b,p)+k(p^a q^b,q)-k(p^a q^b,pq)+\phi(p^a q^b)	\\
+\begin{aligned}
+\phi(mn)=\phi(p^a q^b) &= p^a q^b -k(p^a q^b,p)-k(p^a q^b,q)+k(p^a q^b,pq)	\\
+&= p^aq^b- p^{a-1}q^b -p^aq^{b-1}+p^{a-1}q^{b-1}	\\
+&= (p^a-p^{a-1})(q^b-q^{b-1})	\\
+&= \phi(p^a)\phi(q^b)	\\
+&= \phi(m)\phi(n)
+\end{aligned}
+$$
+对于一般情况的n
+
+对n进行因式分解：
+$$
+\begin{gathered}
+n=\prod_{i=1}^{k} p_{i}^{e_{i}} 
+\end{gathered}
+$$
+n的欧拉函数可以表示为
+$$
+\begin{aligned}
+\phi(n)	&=\prod_{i=1}^{k} p_{i}^{e_{i}-1}\left(p_{i}-1\right)	\\
+		&=\prod_{i=1}^{k} p_{i}^{e_{i}}\left(1-\frac{1}{p_{i}}\right)	\\
+		&=n \prod_{i=1}^{k} \left(1-\frac{1}{p_{i}}\right)
+\end{aligned}
+$$
+
+##### 2)、利用筛选法求欧拉函数
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+
+#define LL long long
+
+// const LL MAX_NUMBER = 10000010;
+// const LL MAXP = 3163; // (int)(sqrt(MAX_NUMBER*1.0) + 1);
+
+#define MAX_NUMBER 10000010
+#define MAXP 3163 // (int)(sqrt(MAX_NUMBER*1.0) + 1);
+
+int notprime[MAX_NUMBER];
+int primes[MAXP];
+int eula[MAX_NUMBER];
+
+void Euler()
+{
+    memset(notprime, 0, sizeof(notprime));
+    int num = 0;
+    primes[0] = 0;
+    notprime[1] = 1;
+    for (int i = 2; i < MAXP; i++)
+    {
+        if (notprime[i] == 0)
+        {
+            primes[++num] = i;
+        }
+        for (int j = 1; j <= num && i * primes[j] <= MAXP; j++)
+        {
+            notprime[i * primes[j]] = 1; // 已有num个素数 将i的素数倍全部筛选掉
+
+            if (i % primes[j] == 0) // 判断现有的素数有没有i的最小素因子，若有，则不需要继续判断
+                break;
+        }
+    }
+    primes[0] = num;
+}
+
+void eulaFilter()
+{
+    int i, j;
+    notprime[1] = 1;
+    eula[1] = 1;
+    memset(notprime, 0, sizeof(notprime));
+    // 1.枚举每个数
+    for (i = 2; i < MAX_NUMBER; ++i)
+    {
+        if (!notprime[i])
+        {
+            // 2.素数i的欧拉函数i-1
+            eula[i] = i - 1;
+            if (i < MAXP)
+            {
+                primes[++primes[0]] = i;
+            }
+            for (j = i + i; j < MAX_NUMBER; j += i)
+            {
+                notprime[j] = 1;
+                // 3.非素数的欧拉函数为本身*素数分量(1-1/i)的乘积
+                if (!eula[j])
+                    eula[j] = j;
+                eula[j] = eula[j] / i * (i - 1);
+            }
+        }
+    }
+}
+
+int main()
+{
+    Euler();
+    eulaFilter();
+    printf("%d\n",eula[20]);
+    return 0;
+}
+```
+
+由于欧拉函数的表示法和整数的素数拆分表示法很类似，都可以表示成一些素数的函数的乘积，所以同样可以利用筛选法进行求解。
+
+##### 3)、欧拉定理和费马小定理
+
+**欧拉定理**
+
+若$n,a \in N^+$，且互素，即$gcd(n,a)=1$，则：
+$$
+a^{\phi(n)} \equiv 1\quad (\bmod n)
+$$
+**费马小定理**
+
+若$p$为素数，且$gcd(a,q)=1$，则：
+$$
+a^{p-1} \equiv 1 \quad (\bmod p)
+$$
+当n为素数时，$\phi(n)=n-1$，可见费马小定理时欧拉定理的特殊情况
+
+
+
+4)
